--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,43 @@
+body {
+	text-align: center;
+}
 
+.box {
+	display: inline-block;
+	height: 100px;
+	width: 20%;
+}
+
+.teal {
+	background-color: teal;
+}
+
+.gray {
+	background-color: gray;
+}
+
+.green {
+	background-color: green;
+}
+
+.blue {
+	background-color: blue;
+}
+
+@media (max-width: 600px) {
+	.gray, .green {
+		display: none;
+	}
+}
+
+@media (min-width: 1000px) {
+	.box {
+		width: 100%;
+	}
+}
+
+.container {
+	height: 200px;
+	width: 200px;
+	background-color: black;
+}
